FrostWire 2.1.7 build 605 - NOV/20/2019
 - Android 10 compatibility updates
 - Android 4.4 support dropped, minimum compatible version is Android 5.0 Lollypop
 - OKHttp 3.14.0 update
 - androidx components update
 - billingclient:billing:2.0.3 update
 - re2j:1.3 update
 - flexbox:1.1.1 update
 - applovin-sdk:9.9.2 update
 - buildToolsVersion '29.0.2' update
 - play-services-ads:18.3.0 update
 - mopub-sdk 5.10.0 update
 - com.google.android.material:material:1.2.0-alpha0
 - vungle-sdk removed
 - ANR and crash fixes

FrostWire 2.1.6 build 599 - AUG/30/2019
 - Fixes bug where sequential downloads couldn't be turned off
 - Archive.org .torrent download errors fixed
 - TorLock and Torrentz2 search results are magnet based to reduce fetching errors
 - material:1.1.0-alpha09 update
 - play-services-ads:18.1.1 update
 - com.applovin:applovin-sdk:9.8.4 update
 - mopub-sdk:5.8.0 update
 - com.android.tools.build:gradle:3.5.0 update
 - com.android.support:design:29.0.0 update
 - com.android.support:animated-vector-drawable:29.0.0 update
 - com.android.support:customtabs:29.0.0 update
 - com.android.support:exifinterface:29.0.0 update
 - com.android.support:preference-v7:29.0.0 update
 - com.android.support:preference-v14:29.0.0 update
 - gradle wrapper distributionUrl=https\://services.gradle.org/distributions/gradle-5.6-all.zip
 - crash fixes and optimizations
 - New jlibtorrent 1.2.2.0 update
 - jlibtorrent updated to boost 1.71.0
 - jlibtorrent upgraded openssl to 1.1.1c
 - jlibtorrent compiled with std=c++14 (up from c++11)
 - lt:pick contiguous pieces from peers with high download rate
 - lt:fix error handling of moving storage to a drive letter that isn't mounted
 - lt:fix integer overflow in http parser
 - lt:fix integer overflow in chunked http parser
 - lt:factor out and unit test parts of the DHT routing table logic
 - lt:improve sanitation of symlinks, to support more complex link targets (file_storage::sanitize_symlinks)
 - lt:avoid empty dht routing table buckets