@@ -21,8 +21,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.frostwire.android"
           android:installLocation="auto"
-          android:versionCode="605"
-          android:versionName="2.1.7">
+          android:versionCode="606"
+          android:versionName="2.1.8">
     <!-- IMPORTANT!! Ignore these, just use as a reference, now it's handled with gradle -->
     <!-- Plus  android:versionCode="9070xyz" (always commit like this, plus!)-->
     <!-- Basic android:versionCode="9060xyz" (don't commit like this) -->
@@ -302,6 +302,9 @@
             android:name="applovin.sdk.verbose_logging"
             android:value="false" />
 
+        <activity tools:replace="android:configChanges"
+            android:name="com.applovin.adview.AppLovinInterstitialActivity"
+            android:configChanges="orientation|screenSize" />
         <activity android:name="com.applovin.adview.AppLovinConfirmationActivity" />
 
         <!-- MoPub -->
