@@ -413,4 +413,13 @@
     <string name="vpn_suggestion_nordvpn">NORDVPN \n Prueba gratuita de 7 días</string>
     <string name="play_store_out_of_sync">Play Store necesita sincronizarse, espera unos minutos</string>
     <string name="contact_us">Contáctanos</string>
+    <string name="play_uppercase">PLAY</string>
+    <string name="minutes_left_ad_free">%d minutos restan sin publicidad</string>
+    <string name="minute_left_ad_free">Un minuto más sin publicidad</string>
+    <string name="reward_product_title">%d minutos</string>
+    <string name="reward_product_price">Gratis, Toca 1 Video Ad</string>
+    <string name="temporary_ad_removal">Sin Publicidad Temporal</string>
+    <string name="temporary_ad_removal_description">Sin publicidad por %d minutos tras tocar un video</string>
+    <string name="looking_For_rewarded_video">Buscando video con recompensa…</string>
+    <string name="no_reward_videos_available">No pude encontrar un video con recompensa. Intenta de nuevo</string>
 </resources>
