@@ -412,4 +412,13 @@
     <string name="play_store_out_of_sync">Play Store doit se synchroniser, attendre quelques minutes</string>
     <string name="contact_us">Contactez nous</string>
     <string name="use_nyaa">Utilisez Nyaa</string>
+    <string name="play_uppercase">LIRE</string>
+    <string name="minutes_left_ad_free">%d minutes restantes sans annonces</string>
+    <string name="minute_left_ad_free">Une minute restantes sans annonces</string>
+    <string name="reward_product_title">%d minutes</string>
+    <string name="reward_product_price">Gratuit, diffusion d\'1 annonce vidéo</string>
+    <string name="temporary_ad_removal">Suppression des annonces temporaires</string>
+    <string name="temporary_ad_removal_description">Aucune annonce pendant %d minutes après la lecture d\'une vidéo</string>
+    <string name="looking_For_rewarded_video">Vous recherchez une vidéo récompensée…</string>
+    <string name="no_reward_videos_available">Impossible de récupérer une vidéo récompensée. Veuillez réessayer</string>
 </resources>
