@@ -338,8 +338,6 @@
     <string name="error_connection_timed_out">Error: connection timed out/dropped. Try again.</string>
     <string name="current_plan">Current plan</string>
     <string name="days_left">days left</string>
-    <string name="minutes_left_ad_free">%d minutes left Ad-free</string>
-    <string name="minute_left_ad_free">One minute left Ad-free</string>
     <string name="save_bandwidth">Save Bandwidth</string>
     <string name="cheaper_than_lattes">Cheaper than Lattes</string>
     <string name="cheaper_than_drinks">Cheaper than Drinks</string>
@@ -472,13 +470,14 @@
     <string name="vpn_suggestion_nordvpn">NORDVPN \n Free 7-day trial</string>
     <string name="vpn_find_out_more">Find out more</string>
     <string name="frostwire_start_engine_service_security_exception">FrostWire could not start properly due to lack of permissions. Please grant the required permissions and restart the application</string>
-    <string name="play_store_out_of_sync">Play Store needs to synchronize, wait a few minutes</string>
     <string name="contact_us">Contact Us</string>
     <string name="play_uppercase">PLAY</string>
+    <string name="minutes_left_ad_free">%d minutes left Ad-free</string>
+    <string name="minute_left_ad_free">One minute left Ad-free</string>
     <string name="reward_product_title">%d minutes</string>
     <string name="reward_product_price">Free, Play 1 Video Ad</string>
     <string name="temporary_ad_removal">Temporary Ad Removal</string>
     <string name="temporary_ad_removal_description">No ads for %d minutes after playing a video</string>
     <string name="looking_For_rewarded_video">Looking for a rewarded video...</string>
-    <string name="no_reward_videos_available">Could not fetch a rewarded video for you, please try again</string>
+    <string name="no_reward_videos_available">Couldn\'t fetch a rewarded video. Please try again</string>
 </resources>
