@@ -399,8 +399,10 @@ public final class BuyActivity extends AbstractActivity {
         Product prodInApp = store.product(inappSKU);
 
         if (prodSubs == null || prodInApp == null) {
-            UIUtils.showLongMessage(this, R.string.play_store_out_of_sync);
-            finish();
+            //UIUtils.showLongMessage(this, R.string.play_store_out_of_sync);
+            //finish();
+            card.setVisibility(View.GONE);
+            return;
         }
 
         card.setTag(R.id.subs_product_tag_id, prodSubs);
